Font-size: try to fix on iPhone 4S

--- a/css/style.css
+++ b/css/style.css
@@ -255,7 +255,7 @@ footer h4 {
 
 @media screen and (max-width: 665px) {
 	a[data-dropdown="drop"] {
-		font-size: 94%;
+		font-size: 90%;
 	}
 }
 
